--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url("../img/hero-image 2.jpg");
+  background-image: url("img/hero-image 2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
